--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <div class="reference">
                     <h4>参考文献</h4>
                     <ol class="reference-list">
-                        <li>计算理论依据：清华大学特种动力团队江老师研究成果。</li>
+                        <li>计算理论依据：清华大学特种动力团队江老师指导。</li>
                     </ol>
                 </div>
             </div>
