--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <div class="container">
         <header>
     <div style="display: flex; align-items: center;">
+        <svg width="32" height="32" viewBox="0 0 32 32" style="margin-right: 12px; margin-left: 8px;">
+            <!-- 新月 - 更自然的形状 -->
+            <path fill="#ffffff" d="M16 9C10.48 9 6 13.48 6 19s4.48 10 10 10 10-4.48 10-10c0-3.31-1.79-6.21-4.59-7.79l1.42-1.42C23.38 10.37 25 13.11 25 16c0 5.52-4.48 10-10 10S5 21.52 5 16 9.48 6 15 6c1.72 0 3.35 0.46 4.78 1.28l-1.45 1.45C18.8 8.05 17.42 7 16 7c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-2.72-1.19-5.17-3.21-6.84l1.42-1.42C21.46 9.58 23 12.17 23 15c0 3.87-3.13 7-7 7s-7-3.13-7-7 3.13-7 7-7c1.66 0 3.21 0.57 4.42 1.58l-1.42 1.42C18.05 9.19 17.03 9 16 9z"/>
+            <!-- 帆船 - 更有意境的设计 -->
+            <path fill="#ffffff" d="M16 22l-5-4.5 1-4.5 4 4.5 4-4.5 1 4.5-5 4.5zM11 13l4 3.5v4l-4-3.5z"/>
+            <!-- 水面波纹 - 增强意境 -->
+            <path fill="none" stroke="#ffffff" stroke-width="1" opacity="0.7" d="M6 24c4 0 8-1 12-1s8 1 12 1M6 26c4 0 8-1 12-1s8 1 12 1"/>
+        </svg>
         <h1>Fuel Cell 计算器 V2.20</h1>
         <button id="versionLogButton" class="version-log-button" title="查看版本更新日志">ℹ️</button>
     </div>
