--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 </div>
                 
                 <div class="note">
-                    注：流量数据与第一页关联，压力为绝压。
+                    注：流量数据与第一页关联，压力为绝压。可计算海拔高度为30000米。
                 </div>
                 
                 <!-- 参考文献部分 -->
