--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <div class="reference">
                     <h4>参考文献</h4>
                     <ol class="reference-list">
-                        <li>计算理论依据：清华大学特种动力团队江老师指导。</li>
+                        <li>《飞行器环境控制》[M]. 北京: 北京航空航天大学出版社, 2004。</li>
                     </ol>
                 </div>
             </div>
