--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <div class="result-item" title="空气泵入口温度(℃) = 环境温度"><span>空气泵入口温度(℃)：</span><span id="airPumpInletTemp"></span></div>
                         <div class="result-item" title="出口空气流量(mol/s) = 实际入口Air流量 - 理论氢气消耗/2"><span>出口空气流量(mol/s)：</span><span id="outletAirFlow"></span></div>
                         <div class="result-item" title="出口空气流量(NLPM) = 出口空气流量*22.4*60"><span>出口空气流量(NLPM)：</span><span id="outletAirFlowNLPM"></span></div>
-                        <div class="result-item" title="阴极出口总水量(mol/s) = 理论产水量*(1-水分布系数) + 从环境中带入水分 + 干气加湿用水量"><span>阴极出口总水量(mol/s)：<span title="系统有加湿需要将环境湿度设为0" style="cursor: help; margin-left: 5px;">?</span></span><span id="cathodeOutletWater"></span></div>
+                        <div class="result-item" title="阴极出口总水量(mol/s) = 理论产水量*(1-水分布系数) + 从环境中带入水分 + 干气加湿用水量"><span>阴极出口总水量(mol/s)：<span title="系统有加湿器需要将环境湿度(%)设为0" style="cursor: help; margin-left: 5px;">?</span></span><span id="cathodeOutletWater"></span></div>
                         <div class="result-item" title="阴极出口温度(℃) = 操作温度"><span>阴极出口温度(℃)：</span><span id="cathodeOutletTemp"></span></div>
                         <div class="result-item" title="对应的饱和蒸汽压(kPa) = 0.00000097*T^4 - 0.00003455*T^3 + 0.00371504*T^2 + 0.01245629*T + 0.71004367（T为温度）"><span>对应的饱和蒸汽压(kPa)：</span><span id="saturatedVaporPressure2"></span></div>
                         <div class="result-item" title="阴极出口压力(kPa) = 阴极入口压力 - 阴极压损"><span>阴极出口压力(kPa)：</span><span id="cathodeOutletPressure"></span></div>
