--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                                     <input type="number" id="gasStdDensity" value="1.293" step="0.001">
                                 </div>
                                 <div class="input-group">
-                                    <label for="gasPressure" data-i18n="gasPressure">介质压力(kPa):</label>
+                                    <label for="gasPressure" data-i18n="gasPressure">介质压力(Pa):</label>
                                     <input type="number" id="gasPressure" value="245770" step="1">
                                 </div>
                                 <div class="input-group">
@@ -1092,7 +1092,6 @@
                 <h2 data-i18n="contactUsTitle">联系我们</h2>
                 <p data-i18n="contactUsContent">如有任何问题或建议，请通过以下方式联系我们：</p>
                 <p data-i18n="contactEmail">邮箱: 363383119@qq.com</p>
-                <p data-i18n="contactPhone">电话: 400-123-1234</p>
             </div>
         </div>
     </div>
