--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
         <div class="modal-grid">
             <div class="modal-column">
                 <h2 data-i18n="aboutUsTitle">关于我们</h2>
-                <p data-i18n="aboutUsContent">Fuel Cell Calculator 是一个专业的燃料电池计算工具，旨在为工程师和研究人员提供准确的计算服务。感谢程同学在软件开发中提供的支持和校对工作。</p>
+                <p data-i18n="aboutUsContent">Fuel Cell Calculator 是一个专业的燃料电池计算工具，旨在为工程师和研究人员提供准确的计算服务。</p>
             </div>
             <div class="modal-column">
                 <h2 data-i18n="contactUsTitle">联系我们</h2>
